# sdk-python

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
examples/: basic_usage.py
src/disentangle_sdk/: __init__.py  client.py  exceptions.py  types.py
tests/: conftest.py  test_client.py  test_gradient_methods.py
